--- a/src/index.html
+++ b/src/index.html
@@ -1,57 +1,77 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AdminPro</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="google-signin-client_id" content="766264690680-m9aonr6a1j407o74eehgole4961idud4.apps.googleusercontent.com">
-  <script src="https://apis.google.com/js/platform.js"></script>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <head>
+    <meta charset="utf-8" />
+    <title>AdminPro</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="google-signin-client_id"
+      content="766264690680-m9aonr6a1j407o74eehgole4961idud4.apps.googleusercontent.com"
+    />
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-  <!-- Favicon icon -->
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon.png">
-  <!-- Bootstrap Core CSS -->
-  <link href="./assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom CSS -->
-  <link href="./assets/css/style.css" rel="stylesheet">
-  <!-- You can change the theme colors from here -->
-  <link id="theme" rel="stylesheet">
+    <!-- Favicon icon -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/images/favicon.png"
+    />
+    <!-- Bootstrap Core CSS -->
+    <link
+      href="./assets/plugins/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- Custom CSS -->
+    <link href="./assets/css/style.css" rel="stylesheet" />
+    <!-- You can change the theme colors from here -->
+    <link id="theme" rel="stylesheet" />
+      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="fix-header card-no-border fix-sidebar">
-  <!-- ============================================================== -->
+  <body class="fix-header card-no-border fix-sidebar mat-typography">
+    <!-- ============================================================== -->
     <!-- Preloader - style you can find in spinners.css -->
     <!-- ============================================================== -->
     <div class="preloader">
       <div class="loader">
-          <div class="loader__figure"></div>
-          <p class="loader__label">Admin Pro</p>
+        <div class="loader__figure"></div>
+        <p class="loader__label">Admin Pro</p>
       </div>
-  </div>
-  <!-- ============================================================== -->
-  <!-- Main wrapper - style you can find in pages.scss -->
-  <!-- ============================================================== -->
-  <app-root></app-root>
+    </div>
+    <!-- ============================================================== -->
+    <!-- Main wrapper - style you can find in pages.scss -->
+    <!-- ============================================================== -->
+    <app-root></app-root>
 
-  <!-- All Jquery -->
-  <!-- ============================================================== -->
-  <script src="./assets/plugins/jquery/jquery.min.js"></script>
-  <!-- Bootstrap tether Core JavaScript -->
-  <script src="./assets/plugins/bootstrap/js/popper.min.js"></script>
-  <script src="./assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-  <!-- slimscrollbar scrollbar JavaScript -->
-  <script src="./assets/js/perfect-scrollbar.jquery.min.js"></script>
-  <!--Wave Effects -->
-  <script src="./assets/js/waves.js"></script>
-  <!--Menu sidebar -->
-  <script src="./assets/js/sidebarmenu.js"></script>
-  <!--stickey kit -->
-  <script src="./assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
-  <script src="./assets/plugins/sparkline/jquery.sparkline.min.js"></script>
-  <!--Custom JavaScript -->
-  <script src="./assets/js/custom.js"></script>
-  <!-- Chartjs -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <!-- All Jquery -->
+    <!-- ============================================================== -->
+    <script src="./assets/plugins/jquery/jquery.min.js"></script>
+    <!-- Bootstrap tether Core JavaScript -->
+    <script src="./assets/plugins/bootstrap/js/popper.min.js"></script>
+    <script src="./assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <!-- slimscrollbar scrollbar JavaScript -->
+    <script src="./assets/js/perfect-scrollbar.jquery.min.js"></script>
+    <!--Wave Effects -->
+    <script src="./assets/js/waves.js"></script>
+    <!--Menu sidebar -->
+    <script src="./assets/js/sidebarmenu.js"></script>
+    <!--stickey kit -->
+    <script src="./assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
+    <script src="./assets/plugins/sparkline/jquery.sparkline.min.js"></script>
+    <!--Custom JavaScript -->
+    <script src="./assets/js/custom.js"></script>
+    <!-- Chartjs -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
-</body>
+    <!-- Date picker -->
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/moment.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <script type="text/javascript" src="js/daterangepicker.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/daterangepicker.css" />
+  </body>
 </html>
